--- a/force-app/main/default/lwc/helloExpressions/helloExpressions.html
+++ b/force-app/main/default/lwc/helloExpressions/helloExpressions.html
@@ -1,5 +1,5 @@
 <template>
-    <lightning-card  title="HelloBinding" icon-name="custom:custom14">
+    <lightning-card  title="HelloExpressions" icon-name="custom:custom14">
         <div class="slds-var-m-around_medium">
             <lightning-input 
                 type="text" 
